--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://prabudevarajan.github.io/Digital-Marketing-Solutions-Website-Reactjs/",
+  "homepage": "http://Elizah550.github.io/Creatos",
   "name": "digital-marketing-solutions-website-reactjs",
   "version": "0.1.0",
   "private": true,
@@ -13,7 +13,6 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -46,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
