--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Elizah550.github.io/Creatos",
+  "homepage": "http://Elizah550.github.io/",
   "name": "digital-marketing-solutions-website-reactjs",
   "version": "0.1.0",
   "private": true,
